--- a/pls.html
+++ b/pls.html
@@ -96,7 +96,7 @@ a.act6,a:hover{
 </style>
 <title>Pearson Specter &amp; Litt LLP</title>
 
-<body background="pssl.jpg">
+<body bgcolor="red">
 	<nav>
 		<i class="fas fa-bars"></i>
 		<label class="logo">Pearson Specter & Litt</label>
